# fantasy-top-wallet-allocator-demo

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_portfolio.json  sample_wallet.json
docs/: architecture.md  case-study.md  portfolio-summary.md  reviewer-guide.md  sanitization.md
scripts/: check_no_secrets.py
src/fantasy_strategy_demo/: __init__.py  cli.py  io.py  models.py  optimizer.py  telegram_adapter.py
tests/: test_optimizer.py
