[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-top-strategy-bot-demo"
version = "0.1.0"
description = "Sanitized Web3 card-game strategy bot case study and demo optimizer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kirill Savenkov" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fantasy-strategy-demo = "fantasy_strategy_demo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

