[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-top-telegram-bot-demo"
version = "0.1.0"
description = "Sanitized Fantasy Top Telegram bot case study and wallet-allocation demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kirill Savenkov" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fantasy-top-bot-demo = "fantasy_strategy_demo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
