[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-top-wallet-allocator-demo"
version = "0.1.0"
description = "Sanitized Fantasy Top wallet allocation case study and Telegram-style demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kirill Savenkov" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fantasy-wallet-demo = "fantasy_strategy_demo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
